--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 	<p>Contact & Elsewhere:</p>
 	<ul class="dashed">
-		<li>wweeiihhuuaanngg (a) gmail</li>
+		<li>wweeiihhuuaanngg at the email service by Google </li>
 		<li><a href="http://github.com/weiweihuanghuang/" rel="noreferrer">GitHub</a></li>
 		<li><a href="https://www.instagram.com/w__h____/" rel="noreferrer">Instagram/Portfolio</a></li>
 		<li><a href="https://www.twitch.tv/w__h_" rel="noreferrer">Twitch</a></li>
