--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		<li><a href="http://github.com/weiweihuanghuang/" rel="noreferrer">GitHub</a></li>
 		<li><a href="https://www.instagram.com/w__h____/" rel="noreferrer">Instagram/Portfolio</a></li>
 		<li><a href="https://www.twitch.tv/w__h_" rel="noreferrer">Twitch</a></li>
-		<li><a href="https://twitter.com/w__h_" rel="noreferrer">Twitter</a></li>
+<!-- 		<li><a href="https://twitter.com/w__h_" rel="noreferrer">Twitter</a></li> -->
 	</ul>
 	<br>
 
