--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 	<p>Previous Clients:</p>
 	<ul class="dashed">
-		<li><a href="http://www.alphabet-type.com/" rel="noreferrer">Alphabet Type</a></li>
+		<li><a href="https://www.alphabet-type.com/" rel="noreferrer">Alphabet Type</a></li>
 		<li><a href="https://bold-decisions.biz/" rel="noreferrer">Bold Decisions</a></li>
 		<li><a href="https://fonts.google.com/?query=Wei+Huang" rel="noreferrer">Google Fonts</a></li>
 		<li><a href="https://lineto.com/The+Fonts/Font+Categories/Text+Fonts/Bradford/" rel="noreferrer">Lineto</a></li>
@@ -67,9 +67,18 @@
 		<li><a href="https://monokrom.no" rel="noreferrer">Monokrom</a></li>
 		<li><a href="https://sharptype.co/" rel="noreferrer">Sharp Type</a></li>
 		<li><a href="https://www.sourcetype.com" rel="noreferrer">Source Type</a></li>
-		<li><a href="http://laurenzbrunner.com/" rel="noreferrer">Studio Laurenz Brunner</a></li>
+		<li><a href="https://laurenzbrunner.com/" rel="noreferrer">Studio Laurenz Brunner</a></li>
 	</ul>
 	<br>
+
+	<p>Typefaces Released:</p>
+	<ul class="dashed">
+		<li><a href="https://fonts.google.com/specimen/Fragment+Mono" rel="noreferrer">Fragment Mono</a></li>
+		<li><a href="https://counter-forms.com/typefaces/pantasia" rel="noreferrer">Pantasia</a></li>
+		<li><a href="https://fonts.google.com/specimen/Work+Sans" rel="noreferrer">Work Sans</a></li>
+	</ul>
+	<br>
+
 
 	<p>Contact & Elsewhere:</p>
 	<ul class="dashed">
