--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<meta name="referrer" content="no-referrer" />
 	<meta charset="UTF-8">
 	<style>
+		:root{
+		--threshold:50%;
+		}
 		@import url('https://fonts.googleapis.com/css2?family=Fragment+Mono:ital@0;1&display=swap');
 		body {
 			background-color: #fff3f0;
@@ -16,9 +19,9 @@
 			font-size: 28px;
 			padding: 0;
 			margin: 8px 0 0 12px;
-			-webkit-filter: blur(1px);
-			filter: blur(1px);
-			text-shadow: 0px 0px 1px #025be0;
+			-webkit-filter: blur(2px);
+			filter: blur(2px);
+			text-shadow: 0px 0px 2px #025be0;
 		}
 		
 		p {
@@ -49,11 +52,33 @@
 			text-decoration: none;
 			border-bottom: 1px solid #025be0;
 		}
+		#noiseLayer {
+		  position: fixed;
+		  top: 0;
+		  left: 0;
+		  width: 100%;
+		  height: 100%;
+		  filter: url(#noiseFilter) brightness(0.275) contrast(0.4);
+		  mix-blend-mode: difference;
+		  z-index: -1;
+		}
+		.threshold{
+		filter: brightness(calc(100% + var(--threshold))) contrast(1000%);
+		}
 	</style>
 </head>
 
-<body>
-
+<body class="threshold">
+	<div id="noiseLayer"></div>
+	<svg viewBox='0 0 500 500' preserveAspectRatio='none' xmlns='http://www.w3.org/2000/svg' style='display: none;'>
+	  <filter id='noiseFilter'>
+	    <feTurbulence
+	      type='fractalNoise'
+	      baseFrequency='1'
+	      numOctaves='2'
+	      stitchTiles='stitch'/>
+	  </filter>
+	</svg>
 	<p>Wei Huang designs, produces and engineers fonts… and occasionally uses them.</p>
 	<br>
 
