--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 	<title>Wei Huang</title>
 	<meta name="referrer" content="no-referrer" />
 	<meta charset="UTF-8">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Fragment+Mono:ital@0;1&display=swap" rel="stylesheet">
 	<style>
 		:root{
 		--threshold:50%;
 		}
-		@import url('https://fonts.googleapis.com/css2?family=Fragment+Mono:ital@0;1&display=swap');
 		body {
 			background-color: #fff3f0;
 			color: #025be0;
