--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 		  filter: url(#noiseFilter);
 		  -webkit-filter: url(#noiseFilter);
 		  mix-blend-mode: difference;
+		  pointer-events: none;
 		  z-index: 0;
 		}
 
